fixing another error

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
    <!-- Metadata that is the same regardless of the page -->
    <meta name="theme-color" content="#FFFFFF">
    <link rel="icon" href="/favicon-512x512.png" />
-   <meta property="og:url" content="https://love-of-god-and-of-all-men.github.io/{{ page.url }}" />
+   <meta property="og:url" content="https://love-of-god-and-of-all-men.github.io{{ page.url }}" />
    <meta property="og:title" content="{{ page.title }}" />
 
    <title>{{ page.title }}</title>
