--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,9 @@
 <!-- Page Header -->
 <!-- Set your background image for this header on the line below. -->
-{% if page.image %}
+{% if page.image && page.url != "/" %}
 <header class="intro-header" style="background-image: url('/assets/images/headers/{{ page.image }}.webp');">
     {% else %}
-    <header class="intro-header"
-        style="background-image: url('/assets/images/headers/front-page/God-loves-you-chalk.webp');">
+    <header class="intro-header" style="background-image: url('/header-image.webp');">
         {% endif %}
         <div class="container">
             <div class="row">
