--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
    <!-- Main Content -->
    <div class="container">
       <div class="row">
-         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+         <div class="col-lg-8 col-md-8"> <!-- main content -->
             <!-- Below is a script that will get the quote displayed on the page at the current moment and allow it to be shared on various platforms (depending on the device's sharing capabilities) when the link is clicked -->
             <script>
                // sleeping so the quote has time to load. Once the quote loads, we can get the text and share it through the link.
@@ -99,6 +99,9 @@
             </script>
 
             {{content}}
+         </div>
+         <div class="col-lg-4 col-md-4"><!-- sidebar -->
+            <!-- category section goes here -->
          </div>
       </div>
    </div>
