--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,8 +100,8 @@
 
             {{content}}
          </div>
-         <div class="col-lg-4 col-md-4"><!-- sidebar -->
-            <!-- category section goes here -->
+         <div class="col-lg-4 col-md-4 sidebar"><!-- sidebar -->
+            <h3>Post Categories</h3>
          </div>
       </div>
    </div>
