--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,14 +1,15 @@
 ---
 layout: default
+title: Tags
 ---
 
-<h1>Tags</h1>
+<h1>All Tags</h1>
 
 {% for tag in site.tags %}
-  <h2>{{ tag[0] }}</h2>
+  <h2 id="{{ tag[0] | slugify }}">{{ tag[0] }}</h2>
   <ul>
-    {% for post in tag[1] %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
+  {% for post in tag[1] %}
+    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+  {% endfor %}
   </ul>
 {% endfor %}
