--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
   <div class="post-tags">
     {% for tag in page.tags %}
     <a href="{{ site.url }}/tags/#{{ tag | slugify }}"><button class="tag-bubble">{{ tag }}</button></a>
-      {% unless forloop.last %},{% endunless %}
+      {% unless forloop.last %}{% endunless %}
     {% endfor %}
   </div>
 {% endif %}
