--- a/_sass/tags.scss
+++ b/_sass/tags.scss
@@ -4,11 +4,12 @@
   color: #fff;
   padding: 0.5em 1em;
   border-radius: 1em;
-  font-size: 1rem;
+  font-size: 1.5rem;
   text-align: center;
   box-shadow: 0 0.2em 0.5em rgba(0, 0, 0, 0.3);
   cursor: pointer;
 
+  // In SCSS, we can use the & (ampersand) to reference the parent selector and create nested rules, which makes the code more readable and easier to manage. We can also use variables to define reusable values, mixins to define reusable styles, and other features to make our CSS code more modular and maintainable.
   &:focus {
     outline: none;
     box-shadow: 0 0 0.5em #0077cc;
