--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,7 @@
    <div class="container">
       <div class="row">
          <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            {% if page.url == "/" %} <!-- script is included only if it is on the homepage -->
             <!-- Below is a script that will get the quote displayed on the page at the current moment and allow it to be shared on various platforms (depending on the device's sharing capabilities) when the link is clicked -->
             <script>
                // sleeping so the quote has time to load. Once the quote loads, we can get the text and share it through the link.
@@ -97,6 +98,7 @@
                   });
                });
             </script>
+            {% endif %}
 
             {{content}}
          </div>
