--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,7 +104,7 @@
             {{content}}
          </div>
          <!-- right sidebar -->
-         <div class="col-lg-4 col-md-3">
+         <div class="sidebar col-lg-4 col-md-3">
 
          </div>
       </div>
