added sidebar placeholder content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@
          </div>
          <!-- right sidebar -->
          <div class="sidebar col-lg-4 col-md-3">
-
+            <p>Placeholder content</p>
          </div>
       </div>
    </div>
