--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -5,10 +5,16 @@ layout: default
 <h1>All Tags</h1>
 
 {% for tag in site.tags %}
-  <h2 id="{{ tag[0] | slugify }}">{{ tag[0] }}</h2>
-  <ul>
-  {% for post in tag[1] %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+<div class="post-tags">
+  {% for tag in site.tags %}
+  <a href="{{ site.url }}/tags#{{ tag | slugify }}"><button class="tag-bubble">{{ tag }}</button></a>
   {% endfor %}
-  </ul>
+</div>
+
+<h2 id="{{ tag[0] | slugify }}">{{ tag[0] }}</h2>
+<ul>
+  {% for post in tag[1] %}
+  <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+  {% endfor %}
+</ul>
 {% endfor %}
