adding a manifest, starting PWA support

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,8 @@
    <meta property="og:title" content="{{ page.title }}" />
 
    <title>{{ page.title }}</title>
+   <!-- link to the manifest file -->
+   <link rel="manifest" href="manifest.json">
    <!-- Bootstrap Core CSS -->
    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
    <!-- Theme CSS -->
