trying to fix service worker

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,7 +116,7 @@
    <!-- Registering service worker -->
    <script>
       if ('serviceWorker' in navigator) {
-         navigator.serviceWorker.register('/assets/js/sw.js', { scope: '/' });
+         navigator.serviceWorker.register('/sw.js', { scope: '/' });
       }
    </script>
 </body>
