--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,7 @@
                });
             </script>
             {% endif %}
-
+            <div class="offline-message"></div>
             {{content}}
          </div>
       </div>
