--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
    <!-- link to the manifest file -->
    <link rel="manifest" href="/manifest.json">
    <!-- Bootstrap Core CSS -->
-   <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
    <!-- Theme CSS -->
    <link href="/assets/css/clean-blog.min.css" rel="stylesheet">
    <!-- Menu CSS -->
