--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
    <title>{{ page.title }}</title>
    <!-- link to the manifest file -->
    <link rel="manifest" href="/manifest.json">
-   <!-- Bootstrap Core CSS -->
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+   <!-- Bootstrap Core CSS (called from included html file so it is more easily updated in the future) -->
+   {% include bootstrap.html %}
    <!-- Theme CSS -->
    <link href="/assets/css/clean-blog.min.css" rel="stylesheet">
    <!-- Menu CSS -->
