Bootstrap 5.2.3 dependency update

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -11,7 +11,7 @@ body {
 // Set horizontal rule color to border color
 
 hr {
-    background-color: $border-color;
+    border-color: $border-color;
     opacity: 1;
 }
 
