--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,7 @@
    <div class="container">
       <div class="row">
          <div id="posts" class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            {% include countdown.html %}
             {% if page.url == "/" %} <!-- script is included only if it is on the homepage -->
             <!-- Below is a script that will get the quote displayed on the page at the current moment and allow it to be shared on various platforms (depending on the device's sharing capabilities) when the link is clicked -->
             <script>
