--- a/_includes/countdown.html
+++ b/_includes/countdown.html
@@ -16,7 +16,7 @@ var x = setInterval(function() {
   var daysRemaining = Math.ceil(distance / (1000 * 60 * 60 * 24));
 
   // Display the days remaining
-  document.getElementById("countdown").innerHTML = daysRemaining + " days until General Conference.";
+  document.getElementById("countdown").innerHTML = daysRemaining + " days until General Conference." + "\n" + '<a href="https://newsroom.churchofjesuschrist.org/event/april-2023-general-conference" target="_blank">Learn More</a>';
 
   // If the countdown is finished, display a message
   if (distance < 0) {
