--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 {{ content }}
 
 {% include comment-box.html %}
+{% include firebase-script.html %}
 
 {% if page.tags %}
 <div class="post-tags">
