--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
   *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
   /*
   var disqus_config = function () {
-  this.page.url = {{ site.url }};  // Replace PAGE_URL with your page's canonical URL variable
+  this.page.url = {{ post.url }};  // Replace PAGE_URL with your page's canonical URL variable
   this.page.identifier = {{ page.url }}; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
   };
   */
