--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,6 +28,7 @@ layout: default
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
       Disqus.</a></noscript>
 </div>
+<script src="../assets/js/accordion.js"></script>
 {% endif %}
 
 {% if page.tags %}
