adding styling with CSS

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@ layout: default
 {{ content }}
 
 {% if page.comments %}
+<link rel="stylesheet" href="../assets/css/accordion.css">
 <button class="accordion">Comment</button>
 <div class="panel">
   <div id="disqus_thread"></div>
