--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 {{ content }}
 
 {% if page.comments %}
-<link rel="stylesheet" href="../assets/css/accordion.css">
+<link rel="stylesheet" href="/assets/css/accordion.css">
 <button class="accordion">Comment</button>
 <div class="panel">
   <div id="disqus_thread"></div>
@@ -29,7 +29,7 @@ layout: default
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
       Disqus.</a></noscript>
 </div>
-<script src="../assets/js/accordion.js"></script>
+<script src="/assets/js/accordion.js"></script>
 {% endif %}
 
 {% if page.tags %}
