changed button text

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 
 {% if page.comments %}
 <link rel="stylesheet" href="/assets/css/accordion.css">
-<button class="accordion">Comment</button>
+<button class="accordion">Comment on this post</button>
 <div class="panel">
   <div id="disqus_thread"></div>
   <script>
