changing tag for conference alert to info to appropriately reflect its purpose

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
       <div class="row">
          <div id="posts" class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
             {% if page.url == "/" or page.tag == "general conference" %}
-            <div id="countdown" class="alert alert-success" role="alert">{% include countdown.html %}</div>
+            <div id="countdown" class="alert alert-info" role="alert">{% include countdown.html %}</div>
             {% else %}
             {% endif %}
             {% if page.url == "/" %} <!-- script is included only if it is on the homepage -->
