ironing out more bugs

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 
 {% if page.comments %}
 <link rel="stylesheet" href="/assets/css/comment-container.css">
-<div id="comment-container">
+<div id="container">
   <div id="disqus_thread"></div>
   <script>
     /**
