--- a/_includes/countdown.html
+++ b/_includes/countdown.html
@@ -1,4 +1,4 @@
 <div id="countdown"></div>
 <script>
-document.getElementById("countdown").innerHTML= "Watch general conference live on" + ' <a href="https://www.churchofjesuschrist.org/">the Church\'s website</a>' + " or on the" + ' <a href="https://www.youtube.com/user/LDSGeneralConference">the General Conference YouTube channel</a>' + ".";
+document.getElementById("countdown").innerHTML= "Watch general conference on" + ' <a href="https://www.churchofjesuschrist.org/">the Church\'s website</a>' + " or on the" + ' <a href="https://www.youtube.com/user/LDSGeneralConference">the General Conference YouTube channel</a>' + ".";
 </script>
