--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,8 @@
    <meta name="google-site-verification" content="hlYP3FRvFCuR1tXGgIjeIddGUvDxcrxAUM87lp19mrI" />
    <!-- Bing site index verification code -->
    <meta name="msvalidate.01" content="41C763BE2681A36D3DCB8CC46F33A20F" />
+   <!-- Include the keyboard shortcut code -->
+   <script src="/assets/js/keyboard-shortcuts.js"></script>
    {% else %}
    {% endif %}
 
