Added comment for code clarity

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <!-- Page Header -->
 <!-- Set your background image for this header on the line below. -->
+<!-- If the page has an image set, and it isn't the homepage, set the page's intro header to the image that is set for that page. -->
 {% if page.image && page.url != "/" %}
 <header class="intro-header" style="background-image: url('/assets/images/headers/{{ page.image }}.webp');">
     {% else %}
