testing out rearranging post subheading

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 
+<h2 class="subheading"><em>{{ page.subtitle }}</em></h2>
+<hr class="subheading-hr">
+
 {{ content }}
 
 {% if page.tags %}
