hiding some elements when page is printed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <!-- Footer -->
-<footer>
+<!-- Because of CSS rules in our Bootstrap code, anything with the class hidden-print will not be printed. -->
+<footer class="hidden-print">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
