--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -11,7 +11,9 @@ layout: default
 {{ content }}
 
 <h2>Posts</h2>
-    {% assign filtered_posts = site.posts | where: 'author', page.short_name %}
+{% assign filtered_posts = site.posts | where: 'author', page.short_name %}
+<ul>
     {% for post in filtered_posts %}
-    <p><a href="{{ post.url }}">{{ post.title }}</a></p>
+    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
+</ul>
