attempting a bug fix

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
                     </li>
                 </ul>
                 <footer id="foot01" class="copyright"></footer>
-                <script src="footer.js"></script>
+                <script src="/footer.js"></script>
             </div>
         </div>
     </div>
