--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <meta name="color-scheme" content="dark light">
 
    <!-- Code below sets the metadata based on if it is a blog post page or not -->
    {% if page.is_post %}
