--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <h2 class="subheading"><em>{{ page.subtitle }}</em></h2>
-<hr class="subheading-hr">
+<hr class="subheading">
 
 {{ content }}
 
