--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -7,10 +7,14 @@ layout: default
 <!-- We use the sort_natural filter instead of the sort filter to sort the tags. The sort_natural filter performs a case-insensitive sort on the given array. We pass the "first" argument to the filter to specify that we want to sort the tags by their first element, which is the tag name. (Bing AI Chat) -->
 {% assign sorted_tags = site.tags | sort %}
 {% for tag in sorted_tags %}
+<button class="accordion">
   <h2 id="{{ tag[0] | slugify }}">{{ tag[0] }}</h2>
+</button>
+<div class="panel">
   <ul>
     {% for post in tag[1] %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
+</div>
 {% endfor %}
