--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,10 @@ layout: default
 
 {{ content }}
 
+<hr>
+
+<div class="alert alert-success" role="alert">Test</div>
+
 {% if page.tags %}
 <div class="post-tags hidden-print">
   {% for tag in page.tags %}
