--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 
 <hr>
 
-<div class="alert alert-success" role="alert">Test</div>
+<!-- <div class="alert alert-success" role="alert">Learn More at ComeUntoChrist.org</div> -->
 
 {% if page.tags %}
 <div class="post-tags hidden-print">
