--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 
 <hr>
 
-<!-- <div class="alert alert-success" role="alert">Learn More at ComeUntoChrist.org</div> -->
+<div class="alert alert-success invitation-banner" role="alert">Want to learn more? Visit <a href="https://ComeUntoChrist.org">ComeUntoChrist.org</a> <span class="caption text-muted">(This site is not affiliated with ComeUntoChrist.org)</span></div>
 
 {% if page.tags %}
 <div class="post-tags hidden-print">
