--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,14 @@ layout: default
 
 <hr>
 
-<div class="alert alert-info" role="alert">Want to learn more? Visit <a href="https://ComeUntoChrist.org">ComeUntoChrist.org</a> <span class="caption text-muted">(This site is not affiliated with ComeUntoChrist.org)</span></div>
+<!-- Figure out how to use logic to select a few tags -->
+<!-- {% if page.tags contains "guidance" %} -->
+<div class="alert alert-info" role="alert">Want to learn more? Visit <a
+    href="https://ComeUntoChrist.org">ComeUntoChrist.org</a> <span class="caption text-muted">(This site is not
+    affiliated with ComeUntoChrist.org)</span></div>
+<!-- {% endif %} -->
+
+{{ page.tags | inspect }}
 
 {% if page.tags %}
 <div class="post-tags hidden-print">
