--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,8 @@ layout: default
     affiliated with ComeUntoChrist.org)</span></div>
 <!-- {% endif %} -->
 
+{% include attribution.html %}
+
 {% if page.tags %}
 <div class="post-tags hidden-print">
   {% for tag in page.tags %}
