--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
     affiliated with ComeUntoChrist.org)</span></div>
 <!-- {% endif %} -->
 
-{% if page.contributor_link and page.image_contributor %}
+{% if page.image_contributor and page.contributor_link  %}
 {% include attribution.html %}
 {% endif %}
 
