--- a/_includes/attribution.html
+++ b/_includes/attribution.html
@@ -1,1 +1,1 @@
-<p>Header image by <a href="{{ page.contributor_link }}" target="_blank">{{ page.image_contributor }}</a> on <a href="{{ page.contributor_site_link }}" target="_blank">{{ site.contributor_site }}</a></p>
+<p>Header image by <a href="{{ page.contributor_link }}" target="_blank">{{ page.image_contributor }}</a> on <a href="{{ page.contributor_site_link }}" target="_blank">{{ page.contributor_site }}</a></p>
