--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,12 +9,13 @@ layout: default
 
 <hr>
 
-<!-- Figure out how to use logic to select a few tags -->
+<!-- Figure out how to use logic to select a few tags and display the alert -->
 <!-- {% if page.tags contains "guidance" %} -->
+<!-- {% endif %} -->
+
 <div class="alert alert-info" role="alert">Want to learn more? Visit <a
     href="https://ComeUntoChrist.org">ComeUntoChrist.org</a> <span class="caption text-muted">(This site is not
     affiliated with ComeUntoChrist.org)</span></div>
-<!-- {% endif %} -->
 
 {% if page.tags %}
 <div class="post-tags hidden-print">
