using a bootstrap class to center the invitation text

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 <!-- {% if page.tags contains "guidance" %} -->
 <!-- {% endif %} -->
 
-<div class="alert alert-info" role="alert">Want to learn more? Visit <a
+<div class="alert alert-info text-center" role="alert">Want to learn more? Visit <a
     href="https://ComeUntoChrist.org">ComeUntoChrist.org</a> <span class="caption text-muted">(This site is not
     affiliated with ComeUntoChrist.org)</span></div>
 
