--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,10 @@
    {% if page.is_post %}
    <meta name="description" content="{{ page.subtitle }}">
    <meta property="og:description" content="{{ page.subtitle }}" />
+   <meta name="keywords" content="{{ page.tags }}">
    <meta property="og:image"
       content="https://love-of-god-and-of-all-men.github.io/assets/images/headers/{{ page.image }}.webp" />
+   <meta name="author" content="{{ page.author }}">
    {% else %}
    <meta name="description" content="Doing my best to spread God's love to everyone">
    <meta property="og:description" content="Doing my best to spread God's love to everyone" />
