--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
    {% if page.is_post %}
    <meta name="description" content="{{ page.subtitle }}">
    <meta property="og:description" content="{{ page.subtitle }}" />
-   <meta name="keywords" content="{{ page.tags }}">
+   {% assign tags = page.tags %}
+   <meta name="keywords" content="{{ tags | join: ', ' }}">
    <meta property="og:image"
       content="https://love-of-god-and-of-all-men.github.io/assets/images/headers/{{ page.image }}.webp" />
    <meta name="author" content="{{ page.author }}">
