adding print friendly pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,7 @@
       rel='stylesheet' type='text/css'>
    <!-- prevents images on page from being pinned to Pinterest -->
    <meta name="pinterest" content="nopin" />
+   {% include print.html %}
 </head>
 
 <body onload="genTip()">
