--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+{% include view-asl.html %}
 <h2 class="subheading"><em>{{ page.subtitle }}</em></h2>
 <hr class="subheading">
 
