--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,9 @@
 <!-- Set your background image for this header on the line below. -->
 <!-- If the page has an image set, and it isn't the homepage, set the page's intro header to the image that is set for that page. -->
 {% if page.image && page.url != "/" %}
-<header class="intro-header post-header" style="background-image: url('/assets/images/headers/{{ page.image }}.webp');">
+<header class="intro-header post-header" style="background-image: linear-gradient(0deg, #00000060, #00000000), url('/assets/images/headers/{{ page.image }}.webp');">
     {% else %}
-    <header class="intro-header" style="background-image: url('/header-image.webp');">
+    <header class="intro-header" style="background-image: linear-gradient(0deg, #00000060, #00000000), url('/header-image.webp');">
         {% endif %}
         <div class="container">
             <div class="row">
