adding rss feed to site

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
    <link rel="icon" href="/favicon-512x512.png" />
    <meta property="og:url" content="https://love-of-god-and-of-all-men.github.io{{ page.url }}" />
    <meta property="og:title" content="{{ page.title }}" />
+   <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml">
 
    <title>{{ page.title }}</title>
    <!-- Bootstrap Core CSS (called from included html file so it is more easily updated in the future) -->
