--- a/_includes/postheading.html
+++ b/_includes/postheading.html
@@ -21,5 +21,51 @@
       </span>
       {% endif %}
       {% endif %}
+
+      <br>
+      <span>
+            <ul class="list-inline text-center">
+                  <li>
+                        <a href="mailto:?subject={{ page.title }} - The Love of God and of All Men&body={{ page.subtitle }}%0D%0A%0D%0AYour message:"
+                              target="_blank" title="Email to a Friend">
+                              <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-paper-plane fa-stack-1x fa-inverse" aria-hidden="true">
+                                    </i>
+                              </span>
+                        </a>
+                  </li>
+                  <li>
+                        <a href="#" onclick="copyText()" title="Copy Post URL">
+                              <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-link fa-stack-1x fa-inverse" aria-hidden="true"></i>
+                              </span>
+                        </a>
+                        <script>
+                              function copyText() {
+                                    /* Copy text into clipboard */
+                                    navigator.clipboard.writeText
+                                          ("{{ site.url }}{{ page.url }}");
+                              }
+                        </script>
+                  </li>
+                  <li>
+                        <a href="#" onclick="printPage()" title="Print this Page">
+                              <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
+                                    <i class="fa fa-print fa-stack-1x fa-inverse" aria-hidden="true">
+                                    </i>
+                              </span>
+                        </a>
+                        <script>
+                              function printPage() {
+                                    javascript: (function () { if (window['priFri']) { window.print() } else { pfstyle = 'nbk'; pfBkVersion = '1'; _pnicer_script = document.createElement('SCRIPT'); _pnicer_script.type = 'text/javascript'; _pnicer_script.src = '//cdn.printfriendly.com/printfriendly.js'; document.getElementsByTagName('head')[0].appendChild(_pnicer_script); } })();
+                                    event.preventDefault();
+                              }
+                        </script>
+                  </li>
+            </ul>
+      </span>
 </div>
 </div>
