--- a/_includes/postheading.html
+++ b/_includes/postheading.html
@@ -26,7 +26,7 @@
             <ul class="list-inline text-center">
                   <!-- Email to a friend -->
                   <li>
-                        <a href="mailto:?subject={{ page.title }} - The Love of God and of All Men&body={{ page.subtitle }}%0D%0A{{ site.url }}{{ page.url }}%0D%0A%0D%0AYour message:"
+                        <a href="mailto:?subject={{ page.title }} - The Love of God and of All Men&body={{ page.subtitle }}%0D%0A%0D%0A{{ site.url }}{{ page.url }}%0D%0A%0D%0AYour message:"
                               target="_blank" title="Email to a Friend">
                               <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
