commenting out code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,8 @@
 
    <!-- Include JavaScript in our posts (makes our ASL message stay closed for 30 days) -->
    {% if page.is_post %}
-   <script src="/assets/js/message-close-cookie.js"></script>
+   <!-- Commenting out for now because script does not exist. -->
+   <!-- <script src="/assets/js/message-close-cookie.js"></script> -->
    {% endif %}
    {% include print.html %}
 </head>
