--- a/_includes/share.html
+++ b/_includes/share.html
@@ -4,19 +4,14 @@
                   <li>
                         <a href="mailto:?subject={{ page.title }} - The Love of God and of All Men&body={{ page.subtitle }}%0D%0A%0D%0A{{ site.url }}{{ page.url }}%0D%0A%0D%0AYour message:"
                               target="_blank" title="Email to a Friend">
-                              <span class="fa-stack fa-md">
-                                    <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                                    <i class="fa fa-paper-plane fa-stack-1x fa-inverse" aria-hidden="true">
+                                    <i class="fa fa-paper-plane" aria-hidden="true">
                                     </i>
-                              </span>
                         </a>
                   </li>
                   <!-- Copy post URL (with checkmark icon after copy) -->
                   <li>
                         <a href="#" onclick="copyText()" title="Copy Post URL">
-                              <span class="fa-stack fa-md">
-                                    <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                                    <i class="fa fa-link fa-stack-1x fa-inverse" id="copy-url" aria-hidden="true"></i>
+                                     <i class="fa fa-link" id="copy-url" aria-hidden="true"></i>
                               </span>
                         </a>
                         <script>
@@ -33,9 +28,7 @@
                   <!-- Print page with printfriendly.com -->
                   <li>
                         <a href="#" onclick="printPage()" title="Print this Page">
-                              <span class="fa-stack fa-md">
-                                    <i class="fa fa-circle fa-stack-2x" aria-hidden="true"></i>
-                                    <i class="fa fa-print fa-stack-1x fa-inverse" aria-hidden="true">
+                                     <i class="fa fa-print" aria-hidden="true">
                                     </i>
                               </span>
                         </a>
