--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ layout: default
 
 {% include view-asl.html %}
 <h2 class="subheading"><em>{{ page.subtitle }}</em></h2>
+{% include share.html %}
 <hr class="subheading">
 {% include share.html %}
 
