--- a/_includes/share.html
+++ b/_includes/share.html
@@ -20,7 +20,7 @@
                                     navigator.clipboard.writeText
                                           ("{{ site.url }}{{ page.url }}");
 
-                                    document.getElementById("copy-url").className = "fa fa-check fa-stack-1x fa-inverse";
+                                    document.getElementById("copy-url").className = "fa fa-check";
                                     document.getElementById("copy-url").style.color = "#03c04a";
                               }
                         </script>
