--- a/_includes/share-newest.html
+++ b/_includes/share-newest.html
@@ -2,7 +2,7 @@
             <ul class="list-inline text-center">
                   <!-- Email to a friend -->
                   <li>
-                        <a href="mailto:?subject={{ page.title }} - The Love of God and of All Men&body={{ page.subtitle }}%0D%0A%0D%0A{{ site.url }}{{ page.url }}%0D%0A%0D%0AYour message:"
+                        <a href="mailto:?subject={{ post.title }} - The Love of God and of All Men&body={{ page.subtitle }}%0D%0A%0D%0A{{ site.url }}{{ page.url }}%0D%0A%0D%0AYour message:"
                               target="_blank" title="Email to a Friend">
                                     <i class="fa fa-paper-plane" aria-hidden="true">
                                     </i>
@@ -18,7 +18,7 @@
                               function copyText() {
                                     /* Copy text into clipboard */
                                     navigator.clipboard.writeText
-                                          ("{{ site.url }}{{ page.url }}");
+                                          ("{{ site.url }}{{ post.url }}");
 
                                     document.getElementById("copy-url").className = "fa fa-check";
                                     document.getElementById("copy-url").style.color = "#03c04a";
