--- a/_layouts/newest-post.html
+++ b/_layouts/newest-post.html
@@ -47,6 +47,15 @@
 </head>
 
 <body>
+<!-- Navigation -->
+<nav class="navbar navbar-default navbar-custom navbar-fixed-top">
+   <div class="container-fluid">
+      <div class="navbar-header page-scroll">
+         <a class="navbar-brand" href="/">The Love of God and of All Men</a>
+      </div>
+   </div>
+</nav>
+   
    <!-- Main Content -->
    <div class="container">
       <div class="row">
