--- a/_layouts/newest-post.html
+++ b/_layouts/newest-post.html
@@ -50,6 +50,13 @@
    <div class="container">
       <div class="row">
          <div id="posts" class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <a href="/">View all posts:
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-house fa-stack-1x fa-inverse"></i>
+                            </span>
+            </a>
+            
             {{content}}
          </div>
       </div>
